--- a/app/src/main/res/layout-land/activity_focus.xml
+++ b/app/src/main/res/layout-land/activity_focus.xml
@@ -3,34 +3,36 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="ru.sukharev.focustimer.focus.FocusActivity">
 
     <ProgressBar
-
         android:id="@+id/focus_progress_bar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="@dimen/focus_progress_size"
         android:layout_height="@dimen/focus_progress_size"
-        android:indeterminate="false"
-        android:max="100"
-        android:progress="50"
         android:layout_centerInParent="true"
+        android:indeterminate="false"
         android:progressDrawable="@drawable/circle_progress"
-        android:secondaryProgress="100"
-        />
-
-    <ImageView
-        android:layout_width="90dp"
-        android:layout_height="90dp"
-        android:layout_centerInParent="true"/>
+        android:secondaryProgress="100" />
 
     <TextView
         android:id="@+id/focus_text"
         android:layout_width="@dimen/focus_text_layout_size"
-        android:layout_height="@dimen/focus_text_size"
+        android:layout_height="@dimen/focus_text_layout_size"
         android:gravity="center"
         android:layout_centerInParent="true"
         android:textColor="@color/colorPrimaryDark"
-        android:textSize="20sp" />
+        android:textSize="@dimen/focus_text_size" />
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/focus_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@id/focus_text"
+        android:layout_toEndOf="@id/focus_text"
+        android:layout_centerVertical="true"
+        app:backgroundTint="@color/colorPrimary"
+        app:fabCustomSize="@dimen/focus_button_size" />
 
 </RelativeLayout>
