--- a/app/src/main/res/layout/activity_focus.xml
+++ b/app/src/main/res/layout/activity_focus.xml
@@ -7,6 +7,17 @@
     tools:context="ru.sukharev.focustimer.focus.FocusActivity">
 
     <ProgressBar
+        android:id="@+id/focus_level_progress_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="@dimen/focus_level_width"
+        android:layout_height="@dimen/focus_level_height"
+        android:layout_above="@id/focus_text"
+        android:layout_centerInParent="true"
+        android:indeterminate="false"
+        android:progressDrawable="@drawable/level_progress"
+        android:secondaryProgress="100" />
+
+    <ProgressBar
         android:id="@+id/focus_progress_bar"
         style="?android:attr/progressBarStyleHorizontal"
         android:layout_width="@dimen/focus_progress_size"
