--- a/app/src/main/res/layout-land/activity_focus.xml
+++ b/app/src/main/res/layout-land/activity_focus.xml
@@ -5,6 +5,30 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="ru.sukharev.focustimer.focus.FocusActivity">
+    <TextView
+        android:id="@+id/focus_level_text"
+        android:textColor="@color/colorBlack"
+        android:textSize="@dimen/focus_level_text_size"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_above="@id/focus_level_progress_bar"
+        android:layout_marginBottom="@dimen/vertical_progress_bar_margin"
+        android:layout_toLeftOf="@id/focus_text"
+        android:layout_toStartOf="@id/focus_text"
+        />
+    <ProgressBar
+        android:id="@+id/focus_level_progress_bar"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="@dimen/focus_level_width"
+        android:layout_height="@dimen/focus_level_height"
+        android:layout_toLeftOf="@id/focus_text"
+        android:layout_toStartOf="@id/focus_text"
+        android:layout_centerVertical="true"
+        android:indeterminate="false"
+        android:rotation="270"
+        android:progressDrawable="@drawable/level_progress"
+        android:secondaryProgress="100" />
 
     <ProgressBar
         android:id="@+id/focus_progress_bar"
@@ -32,6 +56,7 @@
         android:layout_toRightOf="@id/focus_text"
         android:layout_toEndOf="@id/focus_text"
         android:layout_centerVertical="true"
+        android:layout_margin="@dimen/focus_button_margin"
         app:backgroundTint="@color/colorPrimary"
         app:fabCustomSize="@dimen/focus_button_size" />
 
