Add switching fab state depending on current focus state

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#004488</color>
     <color name="colorAccent">#BB0088</color>
     <color name="colorBlack">#000000</color>
+    <color name="focus_button_red">#BB4444</color>
 </resources>
