--- a/app/src/main/res/layout/activity_focus.xml
+++ b/app/src/main/res/layout/activity_focus.xml
@@ -50,6 +50,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/focus_text"
         android:layout_centerHorizontal="true"
+        android:src="@drawable/focus_start"
+        android:scaleType="center"
         android:layout_margin="@dimen/focus_button_margin"
         app:backgroundTint="@color/colorPrimary"
         app:fabCustomSize="@dimen/focus_button_size" />
