Make setting max value

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <ru.sukharev.focustimer.utils.TimePreference
-        android:key="focusTime_key"
+        android:key="@string/focus_time_key"
         android:defaultValue="@integer/default_focus_time"
         android:title="@string/focus_time_prefs_title"/>
     <CheckBoxPreference android:title="@string/focus_failed_reward_pref_title"
