--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -5,6 +5,6 @@
         android:defaultValue="@integer/default_focus_time"
         android:title="@string/focus_time_prefs_title"/>
     <CheckBoxPreference android:title="@string/focus_failed_reward_pref_title"
-        android:defaultValue="false"
-        android:key="focusFailedReward_key" />
+        android:defaultValue="@bool/default_reward_for_unsuccessful"
+        android:key="@string/focus_failed_reward_key" />
 </PreferenceScreen>
