Add summaries to settings

--- a/app/src/main/res/values/default.xml
+++ b/app/src/main/res/values/default.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <integer name="default_focus_time">25</integer>
+    <integer name="focus_time_default_value">25</integer>
     <bool name="default_reward_for_unsuccessful">false</bool>
 </resources>
