--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,12 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".settings.SettingsActivity">
-    <fragment
-        android:name="ru.sukharev.focustimer.settings.SettingsActivity$SettingsFragment"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
-        android:id="@+id/settings_fragment" />
-</FrameLayout>
+<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+          android:name="ru.sukharev.focustimer.settings.SettingsActivity$SettingsFragment"
+          android:layout_height="match_parent"
+          android:layout_width="match_parent"
+          android:id="@+id/settings_fragment" />
