--- a/app/src/main/res/layout/activity_focus.xml
+++ b/app/src/main/res/layout/activity_focus.xml
@@ -6,14 +6,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="ru.sukharev.focustimer.focus.FocusActivity">
 
-    <TextView
+    <android.support.v7.widget.AppCompatTextView
         android:id="@+id/focus_level_text"
         android:textColor="@color/colorBlack"
         android:textSize="@dimen/focus_level_text_size"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/focus_level_text_height"
         android:gravity="center"
-        android:layout_above="@id/focus_level_progress_bar"/>
+        android:layout_above="@id/focus_level_progress_bar"
+        app:autoSizeTextType="uniform"/>
     <ProgressBar
         android:id="@+id/focus_level_progress_bar"
         style="?android:attr/progressBarStyleHorizontal"
