--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,5 @@
     <dimen name="focus_button_margin">12dp</dimen>
     <dimen name="focus_level_text_size">24sp</dimen>
     <dimen name="number_picker_text_size">14sp</dimen>
+    <dimen name="focus_level_text_height">40dp</dimen>
 </resources>
